--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header > p {
     color: white;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 1.2em;
